[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>", "Samuel Crow <samueldcrow@gmail.com>"]
description = "Cross-platform virtual memory API"
documentation = "https://docs.rs/region"
edition = "2018"
homepage = "https://github.com/darfink/region-rs"
keywords = ["region", "page", "lock", "protect", "maps"]
license = "MIT"
name = "region"
readme = "README.md"
repository = "https://github.com/darfink/region-rs"
version = "3.0.0"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies]
mach = "0.3"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["basetsd", "minwindef", "sysinfoapi", "memoryapi", "winnt"] }

[target."cfg(unix)".dev-dependencies]
mmap = { package = "mmap-fixed", version = "0.1.5" }

[target."cfg(target_os = \"haiku\")".dependencies]
dashmap = "5.0.0"
lazy_static = "1.4.0"
